# gefera

./: .gitignore  .mesonpy-native-file.ini  .readthedocs.yml  :  LICENSE  MANIFEST  README.md  meson.build  pyproject_old.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  tests.yml
.ipynb_checkpoints/: setup-checkpoint.py
docs/: citation.rst  conf.py  index.rst  install.rst  requirements.txt
docs/tutorials/: kep51_demo.ipynb  moon_demo.ipynb
docs/user/: api.rst  api.rst_tmp
fortran/: .Makefile.swp  Makefile  conf.f90  ellip.f90  hrch.f90  kep.f90  phot.f90  phot_nograd.f90
fortran/.ipynb_checkpoints/: Makefile-checkpoint  conf-checkpoint.f90  hrch-checkpoint.f90  kep-checkpoint.f90  kep_tmp-checkpoint.f90  phot-checkpoint.f90  phot_nograd-checkpoint.f90
gefera/: __init__.py  animate.py  gefera.py  gefera_aesara.py  kep.py  old_gefera.txt  orbits.py  phot.py  scratch.ipynb  systems.py  testing.py
gefera.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gefera/.ipynb_checkpoints/: __init__-checkpoint.py  animate-checkpoint.py  gefera-checkpoint.py  gefera_tmp-checkpoint.py  kep-checkpoint.py  kep_tmp-checkpoint.py  ops-checkpoint.py  phot-checkpoint.py
notebooks/: Figures.ipynb  kep51_demo.ipynb  moon_demo.ipynb  readme_figure.ipynb
notebooks/.ipynb_checkpoints/: moon_demo-checkpoint.ipynb
tests/: Untitled.ipynb  test_all.py  test_flux.py  test_kepler.py  utils.py
tests/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  test_all-checkpoint.py  test_flux-checkpoint.py  test_kepler-checkpoint.py  utils-checkpoint.py  (+1 more)
(+49 files in other folders)
